# Datamaster

./: README.md  main.py  pdf2html_rules.md  pdf2html_workflow.md  pyproject.toml  setup_pdf_converter.sh
.agent/rules/: pdf2html.md
.agent/workflows/: pdf2html.md
.github/workflows/: dependabot-uv.yml
diversos/PDFs/arquivos_portal/saidas/: _relatorio_20251227_044221.json  folder_inspector.py
diversos/PDFs/arquivos_portal/saidas/Pedagogico-ExtraActivities-ExtraActivitiesKIDS2/: Pedagogico-ExtraActivities-ExtraActivitiesKIDS2.md
diversos/PDFs/arquivos_portal/saidas/Pedagogico-ExtraActivities-ExtraActivitiesKIDS4/: Pedagogico-ExtraActivities-ExtraActivitiesKIDS4.md
diversos/PDFs/arquivos_portal/saidas/Pedagogico-ExtraActivities-ExtraActivitiesNextGeneration/: Pedagogico-ExtraActivities-ExtraActivitiesNextGeneration.md
diversos/PDFs/arquivos_portal/saidas/Pedagogico-ExtraActivities-ExtraActivitiesTEENS2/: Pedagogico-ExtraActivities-ExtraActivitiesTEENS2.md
diversos/PDFs/arquivos_portal/saidas/Pedagogico-ExtraActivities-ExtraActivitiesTEENS4/: Pedagogico-ExtraActivities-ExtraActivitiesTEENS4.md
diversos/PDFs/arquivos_portal/saidas/Pedagogico-ExtraActivities-ExtraActivitiesTEENS6/: Pedagogico-ExtraActivities-ExtraActivitiesTEENS6.md
diversos/PDFs/arquivos_portal/saidas/Pedagogico-ExtraActivities-ExtraActivitiesTEENS8/: Pedagogico-ExtraActivities-ExtraActivitiesTEENS8.md
diversos/PDFs/arquivos_portal/saidas/Pedagogico-ExtraActivities-ExtraActivitiesTEENS8_OutputExercises/: Pedagogico-ExtraActivities-ExtraActivitiesTEENS8_OutputExercises.md
(+101 files in other folders)
